--- a/styles/app.css
+++ b/styles/app.css
@@ -1,12 +1,11 @@
-body{
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
 }
 
-img{
+img {
   max-width: 100%;
 }
-
 
 .main-nav {
   /* display: grid;
@@ -15,26 +14,26 @@ img{
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  
+
   margin-right: auto;
   margin-left: auto;
 }
 
-.main-nav p{
+.main-nav p {
   font-weight: 700;
   font-size: 2.12rem;
   margin: 0;
 }
 
-.main-nav ul{
+.main-nav ul {
   display: inline-flex;
   list-style-type: none;
   gap: 16px;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
 
-.main-cover{
+.main-cover {
   background-image: url(../images/figure.png);
   background-repeat: no-repeat;
   background-position: right center;
@@ -42,71 +41,73 @@ img{
   padding-bottom: 82px;
 }
 
-.main-cover img{
+.main-cover img {
   width: 400px;
 }
 
-.main-header{
+.main-header {
   display: flex;
   flex-wrap: wrap;
   gap: 142px;
   margin: 0 auto;
 }
 
-.main-header header{
+.main-header header {
   width: min(100%, 562px);
 }
 
-.main-header .text-s, .main-header .text-xl{
+.main-header .text-s,
+.main-header .text-xl {
   margin: 0;
 }
 
-
-
-.green-dot-paragraph::before{
+.green-dot-paragraph::before {
   content: "";
-  width:10px;
+  width: 10px;
   height: 10px;
-  background-color: #00F07D;
+  background-color: #00f07d;
   display: inline-block;
   border-radius: 50%;
 }
 
-.projects{
-  background-color: #C9D6FA;
+.projects {
+  background-color: #c9d6fa;
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 @media (max-width: 768px) {
-  .projects{
+  .projects {
     grid-template-columns: 1fr;
   }
 }
 
-.benefits-section{
+.benefits-section {
   padding-top: 96px;
   padding-bottom: 87px;
-  background: linear-gradient( rgba(201, 214, 250, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    rgba(201, 214, 250, 0.2) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
   text-align: center;
 }
 
-.benefits-section h2{
+.benefits-section h2 {
   font-size: 2.5rem; /* 16px => 40 / 16 = 2.5 */
   line-height: 3.75rem; /* 16px => 60 / 16 = 3.75 */
-  margin:0;
+  margin: 0;
   font-weight: 600;
 }
 
-.benefits-section .container{
+.benefits-section .container {
   margin: 0 auto;
 }
 
-.benefits-section .container-s{
+.benefits-section .container-s {
   margin: 0 auto;
 }
 
-.benefits{
+.benefits {
   font-size: 1.125rem; /* 16px => 18 / 16 = 1.125 */
   font-weight: 400;
   line-height: 1.625rem; /* 16px => 26 / 16 = 1.625 */
@@ -118,20 +119,19 @@ img{
   margin-top: 3rem; /* 16px => 48 / 16 = 3 */
 }
 
-.benefits p{
-  margin:0;
+.benefits p {
+  margin: 0;
 }
 
-.benefits .text-secondary{
+.benefits .text-secondary {
   font-size: 0.875rem; /* 16px => 14 / 16 = 0.875 */
 }
 
-
-.icon{
+.icon {
   width: 68px;
   height: 68px;
-  background-color: #F9FBFC;
-  border: 1px solid #9DAFBD;
+  background-color: #f9fbfc;
+  border: 1px solid #9dafbd;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -140,68 +140,95 @@ img{
   margin-bottom: 30px;
 }
 
-.quote{
-  width: min(100%,730px);
+.quote {
+  width: min(100%, 730px);
   margin: 0 auto;
   text-align: center;
   padding: 96px 20px;
 }
-.main-quote-text{
+
+.main-quote-text {
   font-weight: 400;
   font-size: 2.125rem; /* 16px => 34 / 16 = 2.125 */
   line-height: 2.875rem; /* 16px => 46 / 16 = 2.875 */
-  color: #366BFF;
+  color: #366bff;
 }
 
-.quote .text-bold{
+.quote .text-bold {
   font-weight: 700;
   font-size: 0.93rem; /* 16px => 15 / 16 = 0.9375 */
-  margin:0;
+  margin: 0;
 }
 
-.quote .text-secondary{
-  font-family: 'Popins', sans-serif;
+.quote .text-secondary {
+  font-family: "Popins", sans-serif;
   font-size: 0.812rem; /* 16px => 13 / 16 = 0.8125 */
-  margin:0;
+  margin: 0;
 }
 
-.quote img{
+.quote img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
 }
 
+.contact-section {
+  margin: 0 auto;
+
+  padding: 96px 0;
+}
+
+.input-field {
+  background-color: #f2f9fa;
+  border: solid 1px #d1d8e3;
+  padding: 15px;
+
+  display: block;
+
+  font-family: "roboto";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
+  color: #9dafbd;
+}
+
+.input-field input {
+  background-color: transparent;
+  border: none;
+  display: block;
+}
 /* Clases utilitarias */
-.container{
+.container {
   width: min(100%, 69em);
 }
-.container-s{
+.container-s {
   width: min(100%, 33.5em); /* 16px => 537 / 16 = 33.5625 */
 }
 
-.text-s{
+.text-s {
   font-size: 0.875rem; /* 16px => 14 / 16 =  0.875 */
   line-height: 1.321rem; /* 16px => 21 / 16 = 1.3125 */
   font-weight: 600;
 }
 
-.text-xl{
+.text-xl {
   font-size: 2.75rem; /* 16px => 44 / 16 = 2.75 */
   line-height: 4.125rem; /* 16px => 66 / 16 = 4.125 */
 }
 
-.text-md{
+.text-md {
   font-size: 1.25rem; /* 16px => 20 / 16 = 1.25 */
   line-height: 1.875rem; /* 16px => 30 / 16 = 1.875 */
 }
-.text-secondary{
+.text-secondary {
   color: rgba(18, 34, 80, 0.64);
   font-weight: 400;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.125rem; /* 16px => 18 / 16 = 1.125 */
   line-height: 1.625rem; /* 16px => 26 / 16 = 1.625 */
 }
 
-.pink-text{
-  color: #FF2EAB;
+.pink-text {
+  color: #ff2eab;
 }
